WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112627
MessagePort::disentangle() takes an ExceptionCode argument without any need
https://bugs.webkit.org/show_bug.cgi?id=112627
Summary
MessagePort::disentangle() takes an ExceptionCode argument without any need
Alexey Proskuryakov
Reported
2013-03-18 14:36:44 PDT
MessagePort::disentangle() is called in two places. One has ASSERT_NO_EXCEPTION, and another fails to check the exception, but clearly cannot get one. This function is also not exposed to bindings.
Attachments
proposed patch
(5.34 KB, patch)
2013-03-18 14:39 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-03-18 14:39:15 PDT
Created
attachment 193657
[details]
proposed patch
Geoffrey Garen
Comment 2
2013-03-18 14:50:08 PDT
Comment on
attachment 193657
[details]
proposed patch r=me
WebKit Review Bot
Comment 3
2013-03-18 15:24:39 PDT
Comment on
attachment 193657
[details]
proposed patch Clearing flags on attachment: 193657 Committed
r146130
: <
http://trac.webkit.org/changeset/146130
>
WebKit Review Bot
Comment 4
2013-03-18 15:24:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug