https://bugs.webkit.org/show_bug.cgi?id=112627 MessagePort::disentangle() takes an ExceptionCode argument without any need

Reviewed by Geoffrey Garen.

MessagePort::disentangle() is called in two places. One has ASSERT_NO_EXCEPTION,
and another fails to check the exception, but clearly cannot get one.

This function is also not exposed to bindings.

* dom/MessagePort.cpp:
(WebCore::MessagePort::disentangle):
(WebCore::MessagePort::disentanglePorts):
* dom/MessagePort.h:
* workers/SharedWorker.cpp:
(WebCore::SharedWorker::create):
Also removed some unhelpful comments.


Canonical link: https://commits.webkit.org/130935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146130 268f45cc-cd09-0410-ab3c-d52691b4dbfc